--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "homepage": "http://ubaimutl.github.io/react-portfolio",
-    "name": "react-portfolio",
+    "homepage": "http://tromoser.github.io/tromoser-portfolio",
+    "name": "tromoser-portfolio",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
